argocd/secure-backend/backend-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: secure-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: backend-api-conf
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              cpu: 64m
              memory: 128Mi
            limits:
              cpu: 128m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: secure-backend
  labels:
    app: backend-api
spec:
  selector:
    app: backend-api
  ports:
    - name: http
      port: 80
